syntax = "proto3";

option csharp_namespace = "DotnetWorkoutKit.Protobuf.CustomWorkout.Alert";

import "SpeedAlert.proto";
import "HeartRateRangeAlert.proto";

message WorkoutAlert {
    enum AlertMetricEnum {
        UNSPECIFIED = 0;  // Default value
        AVERAGE = 1;
        CURRENT = 2;
        COUNT_PER_MINUTE = 5;
    }

    AlertMetricEnum alert_metric = 1;
    uint32 unknown = 2;  // Unknown, 2 = range type
    SpeedAlert speed_alert = 4;
    HeartRateRangeAlert heart_rate_range_alert = 7;
}