syntax = "proto3";

option csharp_namespace = "DotnetWorkoutKit.Protobuf.CustomWorkout";

message WorkoutGoal {
    enum GoalType {
        UNSPECIFIED = 0;  // Default value
        TIME = 1;
        DISTANCE = 3;
        OPEN = 4;
    }
    GoalType goal_type = 1;           // GoalType
    oneof goal {
        TimeGoal time_goal = 2;         // Time goal (if goal_type == 1)
        DistanceGoal distance_goal = 4;     // Distance goal (if goal_type == 3)
        // Open goal has no additional fields (if goal_type == 4)
    }

    message TimeGoal {
        enum TimeUnitType {
            UNSPECIFIED = 0;  // Default value
            SECONDS = 1;
            MINUTES = 2;
            HOURS = 3;
        }
        TimeUnitType unit_type = 1;  // TimeUnitType
        double unit_value = 2;  // Time in units
    }

    message DistanceGoal {
        enum DistanceUnitType {
            UNSPECIFIED = 0;  // Default value
            METERS = 1;
            KILOMETERS = 2;
        }
        DistanceUnitType unit_type = 1;  // DistanceUnitType
        double unit_value = 2;  // Distance in units
    }
}